# speech_transformer_pl

./: .gitignore  README.md  main.py  pyproject.toml  sentencepiece_input.txt  test.ipynb
configs/: config.yaml  preprocess.yaml
configs/model/: default.yaml
configs/preprocess/: default.yaml
configs/trainer/: default.yaml
src/: data_modules.py  dataset.py  preprocess.py  train.py  utils.py
src/audio/: augment.py  core.py  feature.py  parser.py
src/model/: __init__.py  convolution.py  transformer.py
src/preprocess/: __init__.py  character.py  grapheme.py  preprocess.py  subword.py
